# sec-filing-rag-pipeline

./: .env.example  .gitignore  Makefile  README.md  SEC_Filing_RAG_Portfolio.docx  app.py  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
dagster_defs/: __init__.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
demo_assets/: warehouse.duckdb
docs/: architecture.md
eval_data/: eval_set.json
eval_results/: sweep_results.json
scripts/: build_demo_data.py  eval_tfidf.py  make_eval_set.py  run_pipeline.py  seed_ci_warehouse.py
src/: config.py  logging_utils.py  models.py
src/chunk/: chunker.py
src/embed/: embedder.py
src/eval/: evaluate.py
src/ingest/: edgar.py  entities.py  parse.py
src/rag/: pipeline.py
src/store/: qdrant_store.py  warehouse.py
tests/: test_chunker.py  test_embedder.py  test_entities.py  test_retrieval.py
